[Gradle] Remove workaround for https://github.com/gradle/gradle/issues/15538 as the issue was fixed in Gradle 7.x.