@@ -195,10 +195,6 @@ subprojects {
         }
 
         if (buildJavaVersion >= 9) {
-            // -- Workaround for https://github.com/gradle/gradle/issues/15538
-            options.forkOptions.jvmArgs.addAll( ['--add-opens', 'jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED'] )
-            // --
-
             javaCompiler.set(toolchainCompiler)
         }
         else {
